# Corewar

./: CMakeLists.txt  Makefile  a.out  author
Assembler/: Makefile  add.c  bonus.c  free.c  get.c  get_type_arg.c
Assembler/includes/asm/: asm.h
Assembler/libft/srcs/: ft_lstcpy.c  ft_strchr.c
Assembler/srcs/: dlc_read.c  get_bytes.c  init.c  main.c  pars_line.c  read_file.c  trash_fun.c
Bonus/: Makefile
Bonus/ft_printf/: Makefile  author
Bonus/ft_printf/includes/: ft_printf.h  ft_printf.h~
Bonus/ft_printf/libft/: Makefile  author  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  (+41 more)
Bonus/includes/: asm_disasm.h  asm_error.h
Bonus/sources/: byte_parce.c  check.c  code_main.c  err_mess.c  errs.c  file_write.c  main.c
Corewar/includes/: corewar.h  func_op.h  op.h  options.h  parsing.h  process.h  visual.h
Corewar/libft/: Makefile
Corewar/srcs/: add.c  champs.c  champs_utils.c  cycles.c  errors.c  ft_and.c  ft_fork.c  ft_lfork.c  ft_or.c  ft_xor.c  func_print.c  init_ncurses.c  key_hook.c  ldi.c  live.c  lld.c  main.c  math_utils.c  op_utils.c  op_utils2.c  options.c  options_utils.c  pc_utils.c  print_champ.c  print_hud.c  process.c  read.c  sig_handler.c  st.c  sti.c  zjmp.c
My_War/: author
My_War/includes/: asm_op.h  op.h
My_War/libft/: Makefile
My_War/sources/: add.c  arguments.c  free_all.c  initial_and_extens.c
asm/: bonus.c  op.c  open_file.c
assembler/: op.c  translate.c
champion/: poot_inn.cor  poot_inn.s
includes/system/: op.h
(+26 files in other folders)
